k8s/my-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  labels:
    component: web

spec: 
  containers:
    - name: my-nginx
      image: nginx:alpine
      ports:
       - containerPort: 80
