k8s/mybackendlb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mybackendlb-deployment
  labels:
    component: backend
    app: my-app

spec:
  template:
    metadata:
      name: mybackendlb-pod
      labels:
        component: backend
        app: my-app
    spec:
      containers:
      - name: mybackendlb-container
        image: tgarski/mybackendlb
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: backend
