k8s/mybackendlb-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackendlb-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    component: backend
    app: my-app
