k8s/myfrontend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: myfrontend-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    component: frontend
    app: my-app
