k8s/myredis-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: myredis-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    component: cache
    app: my-app
